Mise à jour d'animation avec js

--- a/Benefits.html
+++ b/Benefits.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <title>Piketplace - Benefits</title>
+    <script src="./main.js" defer></script>
 </head>
 
 <body>
@@ -37,162 +38,170 @@
     </header>
 
     <!-- Première section -->
-    <section class="banniere hero-banniere">
+    <section class="banniere reveal hero-banniere">
         <div class="hero-text">
-            <div>Home - Features</div>
-            <h1 class="hero-title">Features</h1>
-            <p>
+            <div class="reveal-1">Home - Features</div>
+            <h1 class="hero-title reveal-2">Features</h1>
+            <p class="reveal-3">
                 Explore the unique advantages and innovative features that make Piketplace a standout platform
             </p>
         </div>
     </section>
 
     <!-- Deuxième section -->
-        <section class="community abouts Benefits">
-            <div class="community-container abouts-container">
-                <div class="about-both">
-                    <div class="about-only special-width">
-                        <img src="./images/logo.png" alt="Logo de Piketplace" width="130px" height="130px">
-                        <h3 class="service-title">Shoppings</h3>
-                        <p>
-                            Piketplace shopping offers a seamless, user-friendly experience for selecting and purchasing items within the Pi Network ecosystem
-                        </p>
-                    </div>
-                    <div class="about-only special-width">
-                        <img src="./images/logo.png" alt="Logo de Piketplace" width="130px" height="130px">
-                        <h3 class="service-title">Sellings</h3>
-                        <p>
-                            The Sellings feature on Piketplace allows sellers to list and showcase products or services, reaching a broad audience and maximizing sales opportunities
-                        </p>
-                    </div>
-                    <div class="about-only special-width">
-                        <img src="./images/logo.png" alt="Logo de Piketplace" width="130px" height="130px">
-                        <h3 class="service-title">Shipping</h3>
-                        <p>
-                            This feature streamlines e-commerce logistics, offering a user-friendly platform for efficient goods management and smooth shipping by sellers
-                        </p>
-                    </div>
+    <section class="community reveal  abouts Benefits">
+        <div class="community-container abouts-container">
+            <div class="about-both reveal-1">
+                <div class="about-only reveal-2 special-width">
+                    <img src="./images/logo.png" class="reveal-2" alt="Logo de Piketplace" width="130px" height="130px">
+                    <h3 class="service-title reveal-3">Shoppings</h3>
+                    <p class="reveal-4">
+                        Piketplace shopping offers a seamless, user-friendly experience for selecting and purchasing
+                        items within the Pi Network ecosystem
+                    </p>
                 </div>
-                <div class="about-both">
-                    <div class="about-only">
-                        <div class="about-only-container">
-                            <img src="./images/logo.png" alt="Logo de Piketplace" width="130px" height="130px">
-                            <h3 class="service-title">Rewarding</h3>
-                            <p>
-                                Piketplace's Rewarding feature adds extra value by using Piket tokens to recognize and appreciate user contributions, fostering a dynamic and engaging environment.
-                            </p>
-                        </div>
-                    </div>
+                <div class="about-only reveal-2 special-width">
+                    <img src="./images/logo.png" class="reveal-2" alt="Logo de Piketplace" width="130px" height="130px">
+                    <h3 class="service-title reveal-3">Sellings</h3>
+                    <p class="reveal-4">
+                        The Sellings feature on Piketplace allows sellers to list and showcase products or services,
+                        reaching a broad audience and maximizing sales opportunities
+                    </p>
                 </div>
-            </div>
-        </section>
-
-    <!-- Section à propos -->
-    <div class="body-white Benefits-white">
-        <section class="about-container">
-        <div class="about-us">
-            <div>
-                <h2 class="about-us-title">About Us</h2>
-                <div class="welcome">
-                    <div class="welcome-title">Welcome to Piketplace</div>
-                    <p>The developers behind the 2023 Hackathon winner platform Piketplace, Djedje, Filano were able
-                        to create an amazing utility application that will allow pioneers to spend their mined Pi
-                        Coins on meaningful purchases. This is a significant development for the Pi Network, as it
-                        demonstrates the real-world utility of Pi Coins beyond simply being a speculative
-                        investment.
+                <div class="about-only reveal-2 special-width">
+                    <img src="./images/logo.png" class="reveal-2" alt="Logo de Piketplace" width="130px" height="130px">
+                    <h3 class="service-title reveal-3">Shipping</h3>
+                    <p class="reveal-4">
+                        This feature streamlines e-commerce logistics, offering a user-friendly platform for efficient
+                        goods management and smooth shipping by sellers
                     </p>
                 </div>
             </div>
-
-            <div class="services">
-                <div class="services-img">
-                    <img src="./images/mobile_piketplace.png" alt="Vue de piketplace sur mobile">
-                </div>
-                <div>
-                    <div>
-                        <h2 class="services-title">Our Basic Features</h2>
-                        <p class="services-prest">
-                            Unlocking the Power of Pi Cryptocurrency: Unique Advantages and Features
+            <div class="about-both">
+                <div class="about-only reveal-2">
+                    <div class="about-only-container">
+                        <img src="./images/logo.png" class="reveal-2" alt="Logo de Piketplace" width="130px"
+                            height="130px">
+                        <h3 class="service-title reveal-3">Rewarding</h3>
+                        <p class="reveal-4">
+                            Piketplace's Rewarding feature adds extra value by using Piket tokens to recognize and
+                            appreciate user contributions, fostering a dynamic and engaging environment.
                         </p>
-                    </div>
-                    <div class="sercice-all">
-                        <div class="service-both">
-                            <div class="service">
-                                <img src="./images/logo.png" alt="Logo de Piketplace" class="logo" width="80px"
-                                    height="80px">
-                                <h3 class="service-title">Shoppings</h3>
-                                <p>
-                                    Piketplace shopping offers a seamless, user-friendly experience for selecting and
-                                    purchasing items within the Pi Network ecosystem
-                                </p>
-                            </div>
-                            <div class="service">
-                                <img src="./images/logo.png" alt="Logo de Piketplace" class="logo" width="80px"
-                                    height="80px">
-                                <h3 class="service-title">Sellings</h3>
-                                <p>
-                                    The Sellings feature on Piketplace allows sellers to list and showcase products
-                                    or services, reaching a broad audience and maximizing sales opportunities
-                                </p>
-                            </div>
-                        </div>
-                        <div class="service-both">
-                            <div class="service">
-                                <img src="./images/logo.png" alt="Logo de Piketplace" class="logo" width="80px"
-                                    height="80px">
-                                <h3 class="service-title">Shipping</h3>
-                                <p>
-                                    This feature streamlines e-commerce logistics, offering a user-friendly platform
-                                    for efficient goods management and smooth shipping by sellers
-                                </p>
-                            </div>
-                            <div class="service">
-                                <img src="./images/logo.png" alt="Logo de Piketplace" class="logo" width="80px"
-                                    height="80px">
-                                <h3 class="service-title">Rewarding</h3>
-                                <p>
-                                    Piketplace's Rewarding feature adds extra value by using Piket tokens to
-                                    recognize and appreciate user contributions, fostering a dynamic and engaging
-                                    environment.
-                                </p>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Section à propos -->
+    <div class="body-white Benefits-white">
+        <section class="about-container">
+            <div class="about-us reveal">
+                <div>
+                    <h2 class="about-us-title">About Us</h2>
+                    <div class="welcome">
+                        <div class="welcome-title reveal-2">Welcome to Piketplace</div>
+                        <p class="reveal-3">The developers behind the 2023 Hackathon winner platform Piketplace, Djedje,
+                            Filano were able
+                            to create an amazing utility application that will allow pioneers to spend their mined Pi
+                            Coins on meaningful purchases. This is a significant development for the Pi Network, as it
+                            demonstrates the real-world utility of Pi Coins beyond simply being a speculative
+                            investment.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="services reveal">
+                    <div class="services-img">
+                        <img src="./images/mobile_piketplace.png" alt="Vue de piketplace sur mobile">
+                    </div>
+                    <div>
+                        <div>
+                            <h2 class="services-title reveal-1">Our Basic Features</h2>
+                            <p class="services-prest reveal-2">
+                                Unlocking the Power of Pi Cryptocurrency: Unique Advantages and Features
+                            </p>
+                        </div>
+                        <div class="sercice-all">
+                            <div class="service-both reveal">
+                                <div class="service reveal-1">
+                                    <img src="./images/logo.png" alt="Logo de Piketplace" class="logo reveal-2"
+                                        width="80px" height="80px">
+                                    <h3 class="service-title reveal-3">Shoppings</h3>
+                                    <p class="reveal-4">
+                                        Piketplace shopping offers a seamless, user-friendly experience for selecting
+                                        and
+                                        purchasing items within the Pi Network ecosystem
+                                    </p>
+                                </div>
+                                <div class="service reveal-1">
+                                    <img src="./images/logo.png" alt="Logo de Piketplace" class="logo reveal-2"
+                                        width="80px" height="80px">
+                                    <h3 class="service-title reveal-3">Sellings</h3>
+                                    <p class="reveal-4">
+                                        The Sellings feature on Piketplace allows sellers to list and showcase products
+                                        or services, reaching a broad audience and maximizing sales opportunities
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="service-both reveal">
+                                <div class="service reveal-1">
+                                    <img src="./images/logo.png" alt="Logo de Piketplace" class="logo reveal-2"
+                                        width="80px" height="80px">
+                                    <h3 class="service-title reveal-3">Shipping</h3>
+                                    <p class="reveal-4">
+                                        This feature streamlines e-commerce logistics, offering a user-friendly platform
+                                        for efficient goods management and smooth shipping by sellers
+                                    </p>
+                                </div>
+                                <div class="service reveal-1">
+                                    <img src="./images/logo.png" alt="Logo de Piketplace" class="logo reveal-2"
+                                        width="80px" height="80px">
+                                    <h3 class="service-title reveal-3">Rewarding</h3>
+                                    <p class="reveal-4">
+                                        Piketplace's Rewarding feature adds extra value by using Piket tokens to
+                                        recognize and appreciate user contributions, fostering a dynamic and engaging
+                                        environment.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <!-- Section banniere community -->
-    <section class="banniere banniere-community">
+    <section class="banniere reveal banniere-community">
         <div class="banniere-text">
-            <h1 class="banniere-title">Voices from the Piketplace Community</h1>
-            <p>
+            <h1 class="banniere-title reveal-2">Voices from the Piketplace Community</h1>
+            <p class="reveal-3">
                 At Piketplace, the heart of our platform lies in the vibrant and diverse community that comes
                 together to buy, sell, and connect.
             </p>
-            <div class="banniere-buttons community-buttons">
+            <div class="banniere-buttons reveal-4 community-buttons">
                 <a class="banniere-button" href="https://testnet.piketplace.com/">Testnet</a>
                 <a class="banniere-button button-even" href="https://pifestmap.piketplace.com/">Pi FestMap</a>
                 <a class="banniere-button" href="https://mainnet.piketplace.com/">Mainnet</a>
             </div>
         </div>
         <div>
-            <img class="banniere-img" src="./images/Mobile-pro.png" alt="Une visuel de piketplace sur smartphone">
+            <img class="banniere-img reveal-1" src="./images/Mobile-pro.png"
+                alt="Une visuel de piketplace sur smartphone">
         </div>
     </section>
 
     <!-- Le FOOTER -->
-    <footer class="footer">
+    <footer class="footer reveal">
         <div class="footer-links">
             <div>
-                <a href="index.html"><img class="footer-logo logo" src="./images/logo.png" alt="logo du site"
+                <a href="index.html"><img class="footer-logo logo reveal-1" src="./images/logo.png" alt="logo du site"
                         width="100px" height="100px"></a>
             </div>
             <div>
-                <h2 class="footer-title">Userful Links</h2>
-                <ul class="footer-nav">
+                <h2 class="footer-title reveal-2">Userful Links</h2>
+                <ul class="footer-nav reveal-3">
                     <li><a href="how_it_works.html">How it Works</a></li>
                     <li><a href="https://mainnet.piketplace.com/#/">Mainnet</a></li>
                     <li><a href="https://mainnet.piketplace.com/#/">Testnet</a></li>
@@ -200,8 +209,8 @@
                 </ul>
             </div>
             <div>
-                <h2 class="footer-title">Quick Links</h2>
-                <ul class="footer-nav">
+                <h2 class="footer-title reveal-2">Quick Links</h2>
+                <ul class="footer-nav reveal-3">
                     <li><a href="https://faq.piketplace.com/">FAQ</a></li>
                     <li><a href="Benefits.html">Benefits and Features</a></li>
                     <li><a href="https://blog.piketplace.com/">Blog</a></li>
@@ -210,7 +219,7 @@
             </div>
         </div>
 
-        <div class="copyright">
+        <div class="copyright reveal-1">
             <p>© 2024 Piketplace, All Right Reserved</p>
             <p>Terms & Condition | ​privacy Policy</p>
         </div>
