--- a/how_it_works.html
+++ b/how_it_works.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <title>Piketplace - How It Works</title>
+    <script src="./main.js" defer></script>
 </head>
 
 <body class="body-white">
@@ -40,10 +41,10 @@
     <!-- La partie principale de la page -->
     <main>
         <!-- Première section -->
-        <section class="banniere hero-banniere">
+        <section class="banniere reveal hero-banniere">
             <div class="hero-text">
-                <h1 class="hero-title">How Piketplace Works</h1>
-                <p>
+                <h1 class="hero-title reveal-1">How Piketplace Works</h1>
+                <p class="reveal-2">
                     Welcome to Piketplace, where the cryptocurrency-powered marketplace experience is designed to be
                     intuitive, transparent, and rewarding
                 </p>
@@ -51,14 +52,14 @@
         </section>
 
         <!-- Deuxième section -->
-        <section class="experience">
+        <section class="experience reveal">
             <div class="about-only-container">
-                <h2 class="community-subtitle">A Seamless Trading Experience</h2>
-                <p>
+                <h2 class="community-subtitle reveal-1">A Seamless Trading Experience</h2>
+                <p class="reveal-2">
                     Whether you’re a buyer, seller, or delivery partner, navigating Piketplace is a breeze. Here’s a
                     step-by-step guide to help you make the most out of your Piketplace journey.
                 </p>
-                <div class="experience-lists">
+                <div class="experience-lists reveal-3">
                     <ol>
                         <li class="experience-list">1-Sign Up for Free</li>
                         <li class="experience-list">2-Explore the Marketplace</li>
@@ -71,35 +72,36 @@
         </section>
 
         <!-- Section banniere community -->
-        <section class="banniere banniere-community">
+        <section class="banniere reveal banniere-community">
             <div class="banniere-text">
-                <h1 class="banniere-title">Voices from the Piketplace Community</h1>
-                <p>
+                <h1 class="banniere-title reveal-2">Voices from the Piketplace Community</h1>
+                <p class="reveal-3">
                     At Piketplace, the heart of our platform lies in the vibrant and diverse community that comes
                     together to buy, sell, and connect.
                 </p>
-                <div class="banniere-buttons community-buttons">
+                <div class="banniere-buttons reveal-4 community-buttons">
                     <a class="banniere-button" href="https://testnet.piketplace.com/">Testnet</a>
                     <a class="banniere-button button-even" href="https://pifestmap.piketplace.com/">Pi FestMap</a>
                     <a class="banniere-button" href="https://mainnet.piketplace.com/">Mainnet</a>
                 </div>
             </div>
             <div>
-                <img class="banniere-img" src="./images/Mobile-pro.png" alt="Une visuel de piketplace sur smartphone">
+                <img class="banniere-img reveal-1" src="./images/Mobile-pro.png"
+                    alt="Une visuel de piketplace sur smartphone">
             </div>
         </section>
     </main>
 
     <!-- Le FOOTER -->
-    <footer class="footer">
+    <footer class="footer reveal">
         <div class="footer-links">
             <div>
-                <a href="index.html"><img class="footer-logo logo" src="./images/logo.png" alt="logo du site"
+                <a href="index.html"><img class="footer-logo logo reveal-1" src="./images/logo.png" alt="logo du site"
                         width="100px" height="100px"></a>
             </div>
             <div>
-                <h2 class="footer-title">Userful Links</h2>
-                <ul class="footer-nav">
+                <h2 class="footer-title reveal-2">Userful Links</h2>
+                <ul class="footer-nav reveal-3">
                     <li><a href="how_it_works.html">How it Works</a></li>
                     <li><a href="https://mainnet.piketplace.com/#/">Mainnet</a></li>
                     <li><a href="https://mainnet.piketplace.com/#/">Testnet</a></li>
@@ -107,8 +109,8 @@
                 </ul>
             </div>
             <div>
-                <h2 class="footer-title">Quick Links</h2>
-                <ul class="footer-nav">
+                <h2 class="footer-title reveal-2">Quick Links</h2>
+                <ul class="footer-nav reveal-3">
                     <li><a href="https://faq.piketplace.com/">FAQ</a></li>
                     <li><a href="Benefits.html">Benefits and Features</a></li>
                     <li><a href="https://blog.piketplace.com/">Blog</a></li>
@@ -117,7 +119,7 @@
             </div>
         </div>
 
-        <div class="copyright">
+        <div class="copyright reveal-1">
             <p>© 2024 Piketplace, All Right Reserved</p>
             <p>Terms & Condition | ​privacy Policy</p>
         </div>
