--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <title>Piketplace - Home</title>
+    <script src="./main.js" defer></script>
 </head>
 
 <body class="body-white">
@@ -39,32 +40,34 @@
     <!-- La partie principale de la page -->
     <main>
         <!-- Première section -->
-        <section class="banniere">
+        <section class="banniere reveal">
             <div class="banniere-text">
-                <h1 class="banniere-title">Piketplace, a Pi Network marketplace</h1>
-                <p>
+                <h1 class="banniere-title reveal-2">Piketplace, a Pi Network marketplace</h1>
+                <p class="reveal-3">
                     For Pi Network currency, Pioneers can publish goods for sale, can
                     shopping and apply for shipping goods from seller to buyer Testnet
                 </p>
-                <div class="banniere-buttons">
+                <div class="banniere-buttons reveal-4">
                     <a class="banniere-button" href="https://testnet.piketplace.com/">Testnet</a>
                     <a class="banniere-button button-even" href="https://pifestmap.piketplace.com/">Pi FestMap</a>
                     <a class="banniere-button" href="https://mainnet.piketplace.com/">Mainnet</a>
                 </div>
             </div>
             <div>
-                <img class="banniere-img" src="./images/Mobile-pro.png" alt="Une visuel de piketplace sur smartphone">
+                <img class="banniere-img reveal-1" src="./images/Mobile-pro.png"
+                    alt="Une visuel de piketplace sur smartphone">
             </div>
         </section>
 
         <!-- Section à propos -->
         <section class="about-container">
-            <div class="about-us">
+            <div class="about-us reveal">
                 <div>
-                    <h2 class="about-us-title">About Us</h2>
+                    <h2 class="about-us-title reveal-1">About Us</h2>
                     <div class="welcome">
-                        <div class="welcome-title">Welcome to Piketplace</div>
-                        <p>The developers behind the 2023 Hackathon winner platform Piketplace, Djedje, Filano were able
+                        <div class="welcome-title reveal-2">Welcome to Piketplace</div>
+                        <p class="reveal-3">The developers behind the 2023 Hackathon winner platform Piketplace, Djedje,
+                            Filano were able
                             to create an amazing utility application that will allow pioneers to spend their mined Pi
                             Coins on meaningful purchases. This is a significant development for the Pi Network, as it
                             demonstrates the real-world utility of Pi Coins beyond simply being a speculative
@@ -73,49 +76,54 @@
                     </div>
                 </div>
 
-                <div class="services">
-                    <div class="services-img">
+                <div class="services reveal">
+                    <div class="services-img reveal-1">
                         <img src="./images/mobile_piketplace.png" alt="Vue de piketplace sur mobile">
                     </div>
                     <div>
                         <div>
-                            <h2 class="services-title">Our Basic Features</h2>
-                            <p class="services-prest">Unlocking the Power of Pi Cryptocurrency: Unique Advantages and
+                            <h2 class="services-title reveal-1">Our Basic Features</h2>
+                            <p class="services-prest reveal-2">Unlocking the Power of Pi Cryptocurrency: Unique
+                                Advantages and
                                 Features</p>
                         </div>
                         <div class="sercice-all">
-                            <div class="service-both">
-                                <div class="service">
-                                    <img src="./images/logo.png" alt="Logo de Piketplace" class="logo" width="80px"
-                                        height="80px">
-                                    <h3 class="service-title">Shoppings</h3>
-                                    <p>Piketplace shopping offers a seamless, user-friendly experience for selecting and
+                            <div class="service-both reveal">
+                                <div class="service reveal-1">
+                                    <img src="./images/logo.png" alt="Logo de Piketplace" class="logo reveal-2"
+                                        width="80px" height="80px">
+                                    <h3 class="service-title reveal-3">Shoppings</h3>
+                                    <p class="reveal-4">Piketplace shopping offers a seamless, user-friendly experience
+                                        for selecting and
                                         purchasing items within the Pi Network ecosystem
                                     </p>
                                 </div>
-                                <div class="service">
-                                    <img src="./images/logo.png" alt="Logo de Piketplace" class="logo" width="80px"
-                                        height="80px">
-                                    <h3 class="service-title">Sellings</h3>
-                                    <p>The Sellings feature on Piketplace allows sellers to list and showcase products
+                                <div class="service reveal-1">
+                                    <img src="./images/logo.png" alt="Logo de Piketplace" class="logo reveal-2"
+                                        width="80px" height="80px">
+                                    <h3 class="service-title reveal-3">Sellings</h3>
+                                    <p class="reveal-4">The Sellings feature on Piketplace allows sellers to list and
+                                        showcase products
                                         or services, reaching a broad audience and maximizing sales opportunities
                                     </p>
                                 </div>
                             </div>
-                            <div class="service-both">
-                                <div class="service">
-                                    <img src="./images/logo.png" alt="Logo de Piketplace" class="logo" width="80px"
-                                        height="80px">
-                                    <h3 class="service-title">Shipping</h3>
-                                    <p>This feature streamlines e-commerce logistics, offering a user-friendly platform
+                            <div class="service-both reveal">
+                                <div class="service reveal-1">
+                                    <img src="./images/logo.png" alt="Logo de Piketplace" class="logo reveal-2"
+                                        width="80px" height="80px">
+                                    <h3 class="service-title reveal-3">Shipping</h3>
+                                    <p class="reveal-4">This feature streamlines e-commerce logistics, offering a
+                                        user-friendly platform
                                         for efficient goods management and smooth shipping by sellers
                                     </p>
                                 </div>
-                                <div class="service">
-                                    <img src="./images/logo.png" alt="Logo de Piketplace" class="logo" width="80px"
-                                        height="80px">
-                                    <h3 class="service-title">Rewarding</h3>
-                                    <p>Piketplace's Rewarding feature adds extra value by using Piket tokens to
+                                <div class="service reveal-1">
+                                    <img src="./images/logo.png" alt="Logo de Piketplace" class="logo reveal-2"
+                                        width="80px" height="80px">
+                                    <h3 class="service-title reveal-3">Rewarding</h3>
+                                    <p class="reveal-4">Piketplace's Rewarding feature adds extra value by using Piket
+                                        tokens to
                                         recognize and appreciate user contributions, fostering a dynamic and engaging
                                         environment.
                                     </p>
@@ -128,11 +136,11 @@
         </section>
 
         <!-- Section community -->
-        <section class="community">
+        <section class="community reveal ">
             <div class="community-container">
-                <h2 class="community-title">Join Our Community</h2>
-                <div class="community-subtitle">Connecting Buyers, Sellers, and Delivery Partners</div>
-                <p>
+                <h2 class="community-title reveal-1">Join Our Community</h2>
+                <div class="community-subtitle reveal-2">Connecting Buyers, Sellers, and Delivery Partners</div>
+                <p class="reveal-3">
                     Piketplace is designed to empower individuals in various roles – be it as sellers showcasing unique
                     products, buyers discovering hidden gems, or delivery partners ensuring safe and prompt
                     deliveries—all using the cryptocurrency Pi
@@ -141,65 +149,69 @@
         </section>
 
         <!-- Section price -->
-        <section class="price">
-            <blockquote class="price-quote">
+        <section class="price reveal">
+            <blockquote class="price-quote reveal-1">
                 <p>Congratulations Piketplace for being a runner-up winner for the Pi Q1 2023 Hackathon!</p>
                 <p>From the team: "Taking part in the hackathon has no doubt shown us the amount of enthusiasm and
                     conviction of this incredible community."</p>
                 <legend>
-                    Read: <a class="default" href="https://t.co/x2c5sACzyI">https://t.co/x2c5sACzyI</a> <a class="default"
-                        href="https://t.co/tEV48wttcM">pic.twitter.com/tEV48wttcM</a>
-                    <br>— Pi Network (@PiCoreTeam) <a class="default"
+                    Read: <a class="default reveal-2" href="https://t.co/x2c5sACzyI">https://t.co/x2c5sACzyI</a> <a
+                        class="default reveal-2" href="https://t.co/tEV48wttcM">pic.twitter.com/tEV48wttcM</a>
+                    <br>— Pi Network (@PiCoreTeam) <a class="default reveal-2"
                         href="https://twitter.com/PiCoreTeam/status/1651716596577214464">April 27, 2023</a>
                 </legend>
             </blockquote>
-            <blockquote class="price-quote">
+            <blockquote class="price-quote reveal-1">
                 <p>Taking part in the hackathon has no doubt shown us the amount of enthusiasm and conviction of this
                     incredible community; we are truly blessed and humbled. We look forward to the journey ahead as
-                    pioneers paving the way for the future of <a class="default" href="https://twitter.com/hashtag/PiNetwork?src=hash">#PiNetwork</a>’s ecosystem. <a class="default" href="https://twitter.com/hashtag/BuildPi2gether?src=hash">#BuildPi2gether</a>
+                    pioneers paving the way for the future of <a class="default reveal-2"
+                        href="https://twitter.com/hashtag/PiNetwork?src=hash">#PiNetwork</a>’s ecosystem. <a
+                        class="default reveal-2"
+                        href="https://twitter.com/hashtag/BuildPi2gether?src=hash">#BuildPi2gether</a>
                     pic.twitter.com/GCPuJHFigd</p>
-                <legend>— Piketplace (@piketplace) <a class="default"
+                <legend>— Piketplace (@piketplace) <a class="default reveal-2"
                         href="https://twitter.com/piketplace/status/1651313602677047300">April 26, 2023</a>
                 </legend>
             </blockquote>
 
-            <div class="faq">
-                <div class="faq-ask community-title">Ask Something?</div>
-                <h2 class="faq-title community-subtitle">Frequently Asked Questions</h2>
-                <a class="topbar-button faq-button" href="./contact.html">Contact Us</a>
+            <div class="faq reveal-1">
+                <div class="faq-ask reveal-2 community-title">Ask Something?</div>
+                <h2 class="faq-title reveal-3 community-subtitle">Frequently Asked Questions</h2>
+                <a class="topbar-button reveal-4 faq-button" href="./contact.html">Contact Us</a>
             </div>
         </section>
 
         <!-- Section banniere community -->
-        <section class="banniere banniere-community">
+        <section class="banniere reveal banniere-community">
             <div class="banniere-text">
-                <h1 class="banniere-title">Voices from the Piketplace Community</h1>
-                <p>
+                <h1 class="banniere-title reveal-2">Voices from the Piketplace Community</h1>
+                <p class="reveal-3">
                     At Piketplace, the heart of our platform lies in the vibrant and diverse community that comes
                     together to buy, sell, and connect.
                 </p>
-                <div class="banniere-buttons community-buttons">
+                <div class="banniere-buttons reveal-4 community-buttons">
                     <a class="banniere-button" href="https://testnet.piketplace.com/">Testnet</a>
                     <a class="banniere-button button-even" href="https://pifestmap.piketplace.com/">Pi FestMap</a>
                     <a class="banniere-button" href="https://mainnet.piketplace.com/">Mainnet</a>
                 </div>
             </div>
             <div>
-                <img class="banniere-img" src="./images/Mobile-pro.png" alt="Une visuel de piketplace sur smartphone">
+                <img class="banniere-img reveal-1" src="./images/Mobile-pro.png"
+                    alt="Une visuel de piketplace sur smartphone">
             </div>
         </section>
     </main>
 
     <!-- Le FOOTER -->
-    <footer class="footer">
+    <footer class="footer reveal">
         <div class="footer-links">
             <div>
-                <a href="index.html"><img class="footer-logo logo" src="./images/logo.png" alt="logo du site"
+                <a href="index.html"><img class="footer-logo logo reveal-1" src="./images/logo.png" alt="logo du site"
                         width="100px" height="100px"></a>
             </div>
             <div>
-                <h2 class="footer-title">Userful Links</h2>
-                <ul class="footer-nav">
+                <h2 class="footer-title reveal-2">Userful Links</h2>
+                <ul class="footer-nav reveal-3">
                     <li><a href="https://piketplace.surge.sh/How-It-Works.html">How it Works</a></li>
                     <li><a href="https://mainnet.piketplace.com/#/">Mainnet</a></li>
                     <li><a href="https://mainnet.piketplace.com/#/">Testnet</a></li>
@@ -207,8 +219,8 @@
                 </ul>
             </div>
             <div>
-                <h2 class="footer-title">Quick Links</h2>
-                <ul class="footer-nav">
+                <h2 class="footer-title reveal-2">Quick Links</h2>
+                <ul class="footer-nav reveal-3">
                     <li><a href="https://faq.piketplace.com/">FAQ</a></li>
                     <li><a href="Benefits.html">Benefits and Features</a></li>
                     <li><a href="https://blog.piketplace.com/">Blog</a></li>
@@ -217,7 +229,7 @@
             </div>
         </div>
 
-        <div class="copyright">
+        <div class="copyright reveal-1">
             <p>© 2024 Piketplace, All Right Reserved</p>
             <p>Terms & Condition | ​privacy Policy</p>
         </div>
