--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <title>Piketplace - About</title>
+    <script src="./main.js" defer></script>
 </head>
 
 <body>
@@ -39,48 +40,58 @@
     <!-- La partie principale de la page -->
     <main>
         <!-- Première section -->
-        <section class="banniere hero-banniere">
+        <section class="banniere reveal hero-banniere">
             <div class="hero-text">
-                <div>Home - About</div>
-                <h1 class="hero-title">About</h1>
-                <p>
-                    Uncover the narrative behind Piketplace, understanding our core values and the community we’re fostering
+                <div class="reveal-1">Home - About</div>
+                <h1 class="hero-title reveal-2">About</h1>
+                <p class="reveal-3">
+                    Uncover the narrative behind Piketplace, understanding our core values and the community we’re
+                    fostering
                 </p>
             </div>
         </section>
 
         <!-- Deuxième section -->
-        <section class="community abouts">
+        <section class="community reveal  abouts">
             <div class="community-container abouts-container">
-                <div class="about-both">
-                    <div class="about-only">
-                        <img src="./images/logo.png" alt="Logo de Piketplace" width="130px" height="130px">
-                        <h3 class="about-title">Our History</h3>
+                <div class="about-both reveal-1">
+                    <div class="about-only reveal-2">
+                        <img src="./images/logo.png" class="reveal-2" alt="Logo de Piketplace" width="130px"
+                            height="130px">
+                        <h3 class="about-title reveal-3">Our History</h3>
                         <p>
-                            Our story is shaped by our commitment to fairness, transparency, and mutual growth. Discover how Piketplace was born and evolved into the flourishing community we are today
+                            Our story is shaped by our commitment to fairness, transparency, and mutual growth. Discover
+                            how Piketplace was born and evolved into the flourishing community we are today
                         </p>
                     </div>
-                    <div class="about-only">
-                        <img src="./images/logo.png" alt="Logo de Piketplace" width="130px" height="130px">
-                        <h3 class="about-title">Our Vision</h3>
+                    <div class="about-only reveal-2">
+                        <img src="./images/logo.png" class="reveal-2" alt="Logo de Piketplace" width="130px"
+                            height="130px">
+                        <h3 class="about-title reveal-3">Our Vision</h3>
                         <p>
-                            At Piketplace, our mission is to connect individuals through decentralized trade, providing an inclusive platform where everyone can seamlessly find and offer products and services.
+                            At Piketplace, our mission is to connect individuals through decentralized trade, providing
+                            an inclusive platform where everyone can seamlessly find and offer products and services.
                         </p>
                     </div>
                 </div>
-                <div class="about-both">
-                    <div class="about-only">
-                        <img src="./images/logo.png" alt="Logo de Piketplace" width="130px" height="130px">
-                        <h3 class="about-title">Commitment To Innovation</h3>
+                <div class="about-both reveal-1">
+                    <div class="about-only reveal-2">
+                        <img src="./images/logo.png" class="reveal-2" alt="Logo de Piketplace" width="130px"
+                            height="130px">
+                        <h3 class="about-title reveal-3">Commitment To Innovation</h3>
                         <p>
-                            We believe in constant innovation to enhance your experience. Whether you're a passionate seller or a curious buyer, our team is dedicated to creating an environment where opportunities are limitless
+                            We believe in constant innovation to enhance your experience. Whether you're a passionate
+                            seller or a curious buyer, our team is dedicated to creating an environment where
+                            opportunities are limitless
                         </p>
                     </div>
-                    <div class="about-only">
-                        <img src="./images/logo.png" alt="Logo de Piketplace" width="130px" height="130px">
-                        <h3 class="about-title">Dynamic Community</h3>
+                    <div class="about-only reveal-2">
+                        <img src="./images/logo.png" class="reveal-2" alt="Logo de Piketplace" width="130px"
+                            height="130px">
+                        <h3 class="about-title reveal-3">Dynamic Community</h3>
                         <p>
-                            Piketplace thrives on a diverse and engaged community. Each member plays an essential role in collective growth, making Piketplace more than just a trading platform
+                            Piketplace thrives on a diverse and engaged community. Each member plays an essential role
+                            in collective growth, making Piketplace more than just a trading platform
                         </p>
                     </div>
                 </div>
@@ -88,12 +99,15 @@
         </section>
 
         <!-- Section Team -->
-        <section class="community team">
+        <section class="community reveal  team">
             <div class="community-container">
-                <h2 class="community-subtitle">Our Team Members</h2>
+                <h2 class="community-subtitle reveal-1">Our Team Members</h2>
                 <div class="our-team">
-                    <figure class="team-member"><img src="./images/Filano.png" alt="Image Lucien KOEKOU (Filano)"><legend>Lucien KOEKOU (Filano)</legend></figure>
-                    <figure class="team-member">
+                    <figure class="team-member reveal-2"><img src="./images/Filano.png"
+                            alt="Image Lucien KOEKOU (Filano)">
+                        <legend>Lucien KOEKOU (Filano)</legend>
+                    </figure>
+                    <figure class="team-member reveal-2">
                         <img src="./images/Djedje.png" alt="Image Adjé SEWOVON (Djedje)">
                         <legend>Adjé SEWOVON (Djedje)</legend>
                     </figure>
@@ -102,59 +116,63 @@
         </section>
 
         <!-- Section price -->
-        <section class="price">
-            <blockquote class="price-quote">
+        <section class="price reveal">
+            <blockquote class="price-quote reveal-1">
                 <p>Congratulations Piketplace for being a runner-up winner for the Pi Q1 2023 Hackathon!</p>
                 <p>From the team: "Taking part in the hackathon has no doubt shown us the amount of enthusiasm and
                     conviction of this incredible community."</p>
                 <legend>
-                    Read: <a class="default" href="https://t.co/x2c5sACzyI">https://t.co/x2c5sACzyI</a> <a class="default"
-                        href="https://t.co/tEV48wttcM">pic.twitter.com/tEV48wttcM</a>
-                    <br>— Pi Network (@PiCoreTeam) <a class="default"
+                    Read: <a class="default reveal-2" href="https://t.co/x2c5sACzyI">https://t.co/x2c5sACzyI</a> <a
+                        class="default reveal-2" href="https://t.co/tEV48wttcM">pic.twitter.com/tEV48wttcM</a>
+                    <br>— Pi Network (@PiCoreTeam) <a class="default reveal-2"
                         href="https://twitter.com/PiCoreTeam/status/1651716596577214464">April 27, 2023</a>
                 </legend>
             </blockquote>
-            <blockquote class="price-quote">
+            <blockquote class="price-quote reveal-1">
                 <p>Taking part in the hackathon has no doubt shown us the amount of enthusiasm and conviction of this
                     incredible community; we are truly blessed and humbled. We look forward to the journey ahead as
-                    pioneers paving the way for the future of <a class="default" href="https://twitter.com/hashtag/PiNetwork?src=hash">#PiNetwork</a>’s ecosystem. <a class="default" href="https://twitter.com/hashtag/BuildPi2gether?src=hash">#BuildPi2gether</a>
+                    pioneers paving the way for the future of <a class="default reveal-2"
+                        href="https://twitter.com/hashtag/PiNetwork?src=hash">#PiNetwork</a>’s ecosystem. <a
+                        class="default reveal-2"
+                        href="https://twitter.com/hashtag/BuildPi2gether?src=hash">#BuildPi2gether</a>
                     pic.twitter.com/GCPuJHFigd</p>
-                <legend>— Piketplace (@piketplace) <a class="default"
+                <legend>— Piketplace (@piketplace) <a class="default reveal-2"
                         href="https://twitter.com/piketplace/status/1651313602677047300">April 26, 2023</a>
                 </legend>
             </blockquote>
         </section>
 
         <!-- Section banniere community -->
-        <section class="banniere banniere-community">
+        <section class="banniere reveal banniere-community">
             <div class="banniere-text">
-                <h1 class="banniere-title">Voices from the Piketplace Community</h1>
-                <p>
+                <h1 class="banniere-title reveal-2">Voices from the Piketplace Community</h1>
+                <p class="reveal-3">
                     At Piketplace, the heart of our platform lies in the vibrant and diverse community that comes
                     together to buy, sell, and connect.
                 </p>
-                <div class="banniere-buttons community-buttons">
+                <div class="banniere-buttons reveal-4 community-buttons">
                     <a class="banniere-button" href="https://testnet.piketplace.com/">Testnet</a>
                     <a class="banniere-button button-even" href="https://pifestmap.piketplace.com/">Pi FestMap</a>
                     <a class="banniere-button" href="https://mainnet.piketplace.com/">Mainnet</a>
                 </div>
             </div>
             <div>
-                <img class="banniere-img" src="./images/Mobile-pro.png" alt="Une visuel de piketplace sur smartphone">
+                <img class="banniere-img reveal-1" src="./images/Mobile-pro.png"
+                    alt="Une visuel de piketplace sur smartphone">
             </div>
         </section>
     </main>
 
     <!-- Le FOOTER -->
-    <footer class="footer">
+    <footer class="footer reveal">
         <div class="footer-links">
             <div>
-                <a href="index.html"><img class="footer-logo logo" src="./images/logo.png" alt="logo du site"
+                <a href="index.html"><img class="footer-logo logo reveal-1" src="./images/logo.png" alt="logo du site"
                         width="100px" height="100px"></a>
             </div>
             <div>
-                <h2 class="footer-title">Userful Links</h2>
-                <ul class="footer-nav">
+                <h2 class="footer-title reveal-2">Userful Links</h2>
+                <ul class="footer-nav reveal-3">
                     <li><a href="how_it_works.html">How it Works</a></li>
                     <li><a href="https://mainnet.piketplace.com/#/">Mainnet</a></li>
                     <li><a href="https://mainnet.piketplace.com/#/">Testnet</a></li>
@@ -162,8 +180,8 @@
                 </ul>
             </div>
             <div>
-                <h2 class="footer-title">Quick Links</h2>
-                <ul class="footer-nav">
+                <h2 class="footer-title reveal-2">Quick Links</h2>
+                <ul class="footer-nav reveal-3">
                     <li><a href="https://faq.piketplace.com/">FAQ</a></li>
                     <li><a href="Benefits.html">Benefits and Features</a></li>
                     <li><a href="https://blog.piketplace.com/">Blog</a></li>
@@ -172,7 +190,7 @@
             </div>
         </div>
 
-        <div class="copyright">
+        <div class="copyright reveal-1">
             <p>© 2024 Piketplace, All Right Reserved</p>
             <p>Terms & Condition | ​privacy Policy</p>
         </div>
